--- a/MasadaSecurity/ClientApp/src/custom.css
+++ b/MasadaSecurity/ClientApp/src/custom.css
@@ -18,3 +18,11 @@ h6 {
 .placeholder-height {
   height: 100vh;
 }
+
+.errors {
+  display: block;
+  margin: 10px 0 5px 10px;
+  color: red;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
